# spreadsheet-bot

./: .env  .gitignore  Cargo.toml  README.md  config.toml  export.csv  spreadsheet.txt
.github/: dependabot.yml
migrations/2020-07-07-224540_roles/: up.sql
migrations/2020-07-08-004924_init/: down.sql  up.sql
src/: logger.rs  main.rs  models.rs  schema.rs  spreadsheet.rs  spreadsheet.txt
src/commands/: bot_commands.rs  c_commands.rs  lock.rs  mod.rs  roles.rs  spreadsheet.rs
src/tools/: mod.rs  update_db.rs
