[package]
name = "spreadsheet-bot"
version = "0.1.0"
authors = ["tzip"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0.90", features = ["derive","rc"] }
serde_json = "1.0"
yard = "0.2.5"
cc = { version = "1.0", features = ["parallel"] }
libc = "0.2.0"
typemap = "0.3.3"

[dependencies.serenity]
serenity = "0.8.0"
features = ["framework", "standard_framework"]