[package]
name = "spreadsheet-bot"
version = "0.1.0"
authors = ["tzip"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0.90", features = ["derive","rc"] }
serde_json = "1.0"
yard = "0.2.5"
libc = "0.2.86"
toml = "0.5.6"
csv = "1.1.3"
log = "0.4"
simplelog = "0.7.5"
typemap = "0.3.3"
chrono = "0.4.11"
diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2"] }
libsqlite3-sys = { version = "0.17.3", features = ["bundled"] }
diesel_migrations = "1.4.0"
dotenv = "0.9.0"
rand = "0.7.3"

[dependencies.serenity]
serenity = "0.8.0"
features = ["framework", "standard_framework"]
